// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it does not display the direction destination when there is only one headsign 1`] = `
<div
  className="m-tnm-sidebar__direction"
>
  <div
    className="m-tnm-sidebar__direction-name u-small-caps"
  >
    Outbound
  </div>
  <div
    className="m-tnm-sidebar__direction-headsigns"
  >
    <div
      className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
    >
      <div
        className="m-tnm-sidebar__headsign"
      >
        <div
          className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
        >
          Headsign
        </div>
      </div>
      <div
        className="m-tnm-sidebar__schedules"
      >
        <div
          className="m-tnm-sidebar__schedule"
        >
          <div
            className="m-tnm-sidebar__time m-tnm-sidebar__time--schedule"
          >
            <div
              className="m-tnm-sidebar__time-number"
            >
              4:30
            </div>
            <div
              className="m-tnm-sidebar__time-mins"
            >
              PM
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it does not display the route direction for commuter rail 1`] = `
<div
  className="m-tnm-sidebar__direction"
>
  <div
    className="m-tnm-sidebar__direction-name u-small-caps"
  >
    Outbound
  </div>
  <div
    className="m-tnm-sidebar__direction-headsigns"
  >
    <div
      className="m-tnm-sidebar__headsign-schedule"
    >
      <div
        className="m-tnm-sidebar__headsign"
      >
        <div
          className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
        >
          Headsign 1
        </div>
        <div
          className="m-tnm-sidebar__headsign-train"
        >
          Train 591
        </div>
      </div>
      <div
        className="m-tnm-sidebar__schedules"
      >
        <div
          className="m-tnm-sidebar__schedule"
        >
          <div
            className="m-tnm-sidebar__time m-tnm-sidebar__time--commuter-rail  text-muted"
          >
            <div
              className=" m-tnm-sidebar__time-number"
            >
              4:30 PM
            </div>
            <div
              className="m-tnm-sidebar__status"
            >
              Scheduled
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__headsign-schedule"
    >
      <div
        className="m-tnm-sidebar__headsign"
      >
        <div
          className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
        >
          Headsign 2
        </div>
        <div
          className="m-tnm-sidebar__headsign-train"
        >
          Train 592
        </div>
      </div>
      <div
        className="m-tnm-sidebar__schedules"
      >
        <div
          className="m-tnm-sidebar__schedule"
        >
          <div
            className="m-tnm-sidebar__time m-tnm-sidebar__time--commuter-rail  text-muted"
          >
            <div
              className=" m-tnm-sidebar__time-number"
            >
              4:30 PM
            </div>
            <div
              className="m-tnm-sidebar__status"
            >
              Scheduled
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders 1`] = `
<div
  className="m-tnm-sidebar__direction"
>
  <div
    className="m-tnm-sidebar__direction-name u-small-caps"
  >
    Outbound
  </div>
  <div
    className="m-tnm-sidebar__direction-headsigns"
  >
    <div
      className="m-tnm-sidebar__headsign-schedule"
    >
      <div
        className="m-tnm-sidebar__headsign"
      >
        <div
          className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
        >
          Headsign 1
        </div>
      </div>
      <div
        className="m-tnm-sidebar__schedules"
      >
        <div
          className="m-tnm-sidebar__schedule"
        >
          <div
            className="m-tnm-sidebar__time m-tnm-sidebar__time--schedule"
          >
            <div
              className="m-tnm-sidebar__time-number"
            >
              4:30
            </div>
            <div
              className="m-tnm-sidebar__time-mins"
            >
              PM
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__headsign-schedule"
    >
      <div
        className="m-tnm-sidebar__headsign"
      >
        <div
          className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
        >
          Headsign 2
        </div>
      </div>
      <div
        className="m-tnm-sidebar__schedules"
      >
        <div
          className="m-tnm-sidebar__schedule"
        >
          <div
            className="m-tnm-sidebar__time m-tnm-sidebar__time--schedule"
          >
            <div
              className="m-tnm-sidebar__time-number"
            >
              4:30
            </div>
            <div
              className="m-tnm-sidebar__time-mins"
            >
              PM
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`returns null if direction has no schedules 1`] = `null`;
